<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeScreenActivity"
    android:background="@drawable/betterapp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_200dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/better_care"
        android:textSize="@dimen/dimen_70sp"
        android:textStyle="bold"
        android:padding="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:backgroundTint="@color/grey_white"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/admin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btn_care_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:backgroundTint="@color/grey_white"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/care_staff"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_admin" />

</androidx.constraintlayout.widget.ConstraintLayout>