<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_view">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_60dp"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="@string/name"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/dimen_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_60dp"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="saurabh"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/dimen_22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="@string/age"
        android:textColor="@color/grey_white"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="27"
        android:textColor="@color/grey_white"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/age" />

    <TextView
        android:id="@+id/care_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_5dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="@string/care_type"
        android:textColor="@color/grey_white"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/care_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="@dimen/dimen_5dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:text="XYZ"
        android:textColor="@color/grey_white"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/care_type"
        app:layout_constraintStart_toEndOf="@+id/care_type"
        app:layout_constraintTop_toTopOf="@+id/care_type" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:src="@drawable/ic_delete"
        android:padding="@dimen/dimen_10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/light_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/care_type" />
</androidx.constraintlayout.widget.ConstraintLayout>